[metadata]
name = sopel-amatsukaze
version = 0.1.0
description = A plugin suite for Sopel that emulates most of Yuuki's Java-based Amatsukaze-chan bot.
author = dgw
author_email = dgw@technobabbl.es
url = https://github.com/dgw/sopel-amatsukaze
license = Eiffel Forum License, version 2
classifiers =
    Intended Audience :: Developers
    Intended Audience :: System Administrators
    License :: Eiffel Forum License (EFL)
    License :: OSI Approved :: Eiffel Forum License
    Topic :: Communications :: Chat :: Internet Relay Chat

[options]
packages = find:
zip_safe = false
include_package_data = true
install_requires =
    sopel>=7.1

[options.entry_points]
sopel.plugins =
    byte = sopel_amatsukaze.byte
